# SE353-SAT-solver

./: CMakeLists.txt
include/: DPLLSolver.h  TracebackSolver.h  cnf.h  utils.h
src/: DPLLSolver.cpp  TracebackSolver.cpp  brute_force.cpp  cli.cpp  loader.cpp  solvers.cpp  utils.cpp
test/: CMakeLists.txt  standard-benchmarks.cpp  test_benchmarks.cpp  test_bf.cpp  test_cnf_loader.cpp  test_dpll.cpp  test_utils.cpp  test_utils.h
test/cnf_examples/: Makefile  input1.cnf  input2.cnf  input3.cnf  input4.cnf
test/cnf_examples/bad/: not_complete.cnf  var_unbound.cnf
